2005-11-04  Sven Neumann  <sven@gimp.org>

	* app/config/gimpconfig-dump.c: fixed typo.

2005-11-04  Sven Neumann  <sven@gimp.org>

	* app/errors.c
	* app/sanity.c: s/The GIMP/GIMP/

2005-11-03  Sven Neumann  <sven@gimp.org>

	* app/gui/splash.c: set the splash image as back pixmap.

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpaction.c
	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcontainerbox.c
	* app/widgets/gimpcontrollerlist.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimppluginaction.c
	* app/widgets/gimptooloptionseditor.c
	* app/widgets/gimpwidgets-utils.c
	* libgimpwidgets/gimpcellrenderercolor.c: use gtk_widget_get_settings()
	instead of gtk_settings_get_for_screen(gtk_widget_get_screen())

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpclipboard.c (gimp_clipboard_set_text): added
	g_return_if_fail (GIMP_IS_GIMP (gimp)).

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/text/gimptext.c: code cleanup, untabified.

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/actions/data-commands.c
	* app/core/gimpprogress.c: #include "gimp.h" instead of "gimp-gui.h"

2005-11-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tga.c (save_image): allocate a tile cache.

2005-11-02  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/actions/data-commands.c: add missing include file.

2005-11-02  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagefile.c
	* app/widgets/gimpimagepropview.c
	* app/widgets/gimpsizebox.c
	* app/widgets/gimptemplateeditor.c: use ngettext() for plural forms.

2005-11-02  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpmemsize.c (gimp_memsize_to_string): use
	dngettext() for plural form.

2005-11-02  Sven Neumann  <sven@gimp.org>

	* app/core/gimppattern.c: rephrased error message for consistency
	and to avoid another plural form.

2005-11-02  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c: use g_utf8_strlen().
